--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -1,35 +1,35 @@
-@import 'normalize'
-
 body
-	margin: 0;
-	padding: 0;
+	margin: 0
+	padding: 0
 
 h1
-	font-size: 36px;
+	font-size: 36px
 
 h2
-	font-size: 28px;
+	font-size: 28px
 
 h3
-	font-size: 24px;
+	font-size: 24px
 
 h4
-	font-size: 20px;
+	font-size: 20px
 
 h5
-	font-size: 18px;
+	font-size: 18px
 
 h6
-	font-size: 16px;
+	font-size: 16px
 
 p
-	font-size: 14px;
+	font-size: 14px
 
 a
-	color: green;
-	text-decoration: none;
+	color: green
+	text-decoration: none
 
 ul
-	padding: 0;
-	margin: 0;
-	list-style: none;
+	padding: 0
+	margin: 0
+	list-style: none
+
+
