Adding compass to this boilerplate

--- a/css/index.css
+++ b/css/index.css
@@ -1,38 +1,1 @@
-body {
-  margin: 0;
-  padding: 0; }
-
-h1 {
-  font-size: 36px; }
-
-h2 {
-  font-size: 28px; }
-
-h3 {
-  font-size: 24px; }
-
-h4 {
-  font-size: 20px; }
-
-h5 {
-  font-size: 18px; }
-
-h6 {
-  font-size: 16px; }
-
-p {
-  font-size: 14px; }
-
-a {
-  color: green;
-  text-decoration: none; }
-
-ul {
-  padding: 0;
-  margin: 0;
-  list-style: none; }
-
-/* No files to import found in modules/* */
-/* No files to import found in state/* */
-
-/*# sourceMappingURL=index.css.map */
+body{margin:0;padding:0}h1{font-size:36px}h2{font-size:28px}h3{font-size:24px}h4{font-size:20px}h5{font-size:18px}h6{font-size:16px}p{font-size:14px}a{color:green;text-decoration:none}ul{padding:0;margin:0;list-style:none}
