--- a/sass/index.sass
+++ b/sass/index.sass
@@ -1,5 +1,6 @@
-@import "utils/*"
+@import 'utils/*'
 @import 'base/*'
 @import 'layout/*'
 @import 'modules/*'
 @import 'state/*'
+@import 'vendor/**/*'
