--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -1,6 +1,6 @@
 @import compass/reset
 
-global-reset
+@include global-reset
 
 body
 	margin: 0
@@ -36,4 +36,5 @@ ul
 	margin: 0
 	list-style: none
 
-
+.inner
+	@include clearfix
