Adding single article page

--- a/sass/layout/_header.sass
+++ b/sass/layout/_header.sass
@@ -1,5 +1,5 @@
 .header
 	width: $container-fluid
-	margin: auto auto 64px auto
+	margin: auto auto 4.9% auto
 	+breakpoint($mobile-screens)
 		margin: 0
