--- a/sass/modules/_navbar.sass
+++ b/sass/modules/_navbar.sass
@@ -45,6 +45,7 @@
 						border-bottom: none
 				a
 					padding: 25px 35px
+					font-family: orbitronMedium
 					+breakpoint($mobile-screens)
 						padding: 25px 25px
 					display: block
