--- a/css/index.css
+++ b/css/index.css
@@ -344,6 +344,51 @@ input {
 @keyframes back-pulse {
   50% {
     color: rgba(32, 152, 209, 0.75); } }
+/* line 1, ../sass/layout/_content.sass */
+.main {
+  padding-bottom: 5%; }
+  /* line 4, ../sass/layout/_content.sass */
+  .main h2, .main h3, .main h4 {
+    font-family: orbitronMedium;
+    letter-spacing: 2px;
+    opacity: 0.8; }
+  /* line 8, ../sass/layout/_content.sass */
+  .main--inner {
+    margin-left: 8.33333%;
+    margin-right: 8.33333%;
+    background: #fff;
+    *zoom: 1;
+    margin-bottom: 5%; }
+    /* line 4, ../sass/utils/_clearfix.sass */
+    .main--inner:after, .main--inner:before {
+      content: "";
+      display: table;
+      clear: both;
+      line-height: 0; }
+    /* line 10, ../sass/utils/_clearfix.sass */
+    .main--inner:after {
+      clear: both; }
+  /* line 13, ../sass/layout/_content.sass */
+  .main--banner {
+    height: 157px;
+    background: #9dbe68;
+    border-bottom: 1px solid #e6e6e6; }
+  /* line 17, ../sass/layout/_content.sass */
+  .main--content {
+    position: relative;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 75%;
+    float: left;
+    padding-right: 10%;
+    padding-top: 120px; }
+    /* line 22, ../sass/layout/_content.sass */
+    .main--content p {
+      font-size: 14px;
+      line-height: 1.8;
+      margin-bottom: 3%; }
+
 /* line 1, ../sass/layout/_footer.sass */
 .footer {
   background: #f7f7f7;
@@ -448,15 +493,69 @@ input {
     .footer--about p, .footer--newsletter-form p {
       font-size: 14px;
       line-height: 1.5; }
+    /* line 68, ../sass/layout/_footer.sass */
+    .footer--about p, .footer--newsletter-form p {
+      font-size: 13px; }
 
 /* line 1, ../sass/layout/_header.sass */
 .header {
   width: 100%;
-  margin: auto auto 64px auto; }
+  margin: auto auto 4.9% auto; }
   @media (max-width: 767px) {
     /* line 1, ../sass/layout/_header.sass */
     .header {
       margin: 0; } }
+
+/* line 1, ../sass/layout/_sidebar.sass */
+.sidebar {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 25%;
+  float: left; }
+  /* line 3, ../sass/layout/_sidebar.sass */
+  .sidebar--items {
+    *zoom: 1;
+    padding-top: 120px; }
+    /* line 4, ../sass/utils/_clearfix.sass */
+    .sidebar--items:after, .sidebar--items:before {
+      content: "";
+      display: table;
+      clear: both;
+      line-height: 0; }
+    /* line 10, ../sass/utils/_clearfix.sass */
+    .sidebar--items:after {
+      clear: both; }
+    /* line 6, ../sass/layout/_sidebar.sass */
+    .sidebar--items > div {
+      margin-bottom: 18%; }
+    /* line 8, ../sass/layout/_sidebar.sass */
+    .sidebar--items a {
+      color: #000;
+      display: block;
+      border: 1px solid transparent;
+      line-height: 1.8; }
+      /* line 13, ../sass/layout/_sidebar.sass */
+      .sidebar--items a:hover {
+        color: #9dbe68; }
+      /* line 15, ../sass/layout/_sidebar.sass */
+      .sidebar--items a:active {
+        border: 1px dotted #e6e6e6; }
+    /* line 17, ../sass/layout/_sidebar.sass */
+    .sidebar--items h2 {
+      border-bottom: 5px solid #9dbe68;
+      padding-bottom: 5%; }
+
+/* line 2, ../sass/modules/_article.sass */
+.article--type {
+  background: url("../img/global/hexagon.png") no-repeat scroll top center transparent;
+  width: 89px;
+  height: 66px;
+  padding: 15px 0 15px;
+  text-align: center;
+  position: absolute;
+  top: -5%;
+  bottom: 0; }
 
 /* line 1, ../sass/modules/_articles.sass */
 .articles {
@@ -585,7 +684,7 @@ input {
               height: 3px;
               width: 0;
               left: 0;
-              bottom: 0;
+              bottom: -1px;
               position: absolute;
               background: transparent;
               transition: width 0.2s ease, background-color 0.2s ease; }
@@ -593,6 +692,11 @@ input {
             .articles--main .row .cols4 ul li a:hover:after, .articles--main .row .cols4 ul li a:active:after, .articles--main .row .cols4 ul li a:focus:after {
               width: 100%;
               background: #95b75e; }
+
+/* line 1, ../sass/modules/_author.sass */
+.author {
+  border-top: 5px solid #9dbe68;
+  margin-top: 7%; }
 
 /* line 1, ../sass/modules/_button.sass */
 .form--submit {
@@ -708,7 +812,7 @@ input {
       .hero-unit--hexagon-menu li > a {
         *zoom: 1;
         display: inline-table;
-        background: url("../img/hero/hexagon.png") no-repeat scroll top center transparent;
+        background: url("../img/global/hexagon.png") no-repeat scroll top center transparent;
         width: 89px;
         height: 66px;
         padding: 15px 0 15px; }
@@ -812,6 +916,7 @@ input {
         /* line 46, ../sass/modules/_navbar.sass */
         .navbar--menu > ul > li a {
           padding: 25px 35px;
+          font-family: orbitronMedium;
           display: block;
           color: #4d4d4d;
           position: relative; }
@@ -819,10 +924,10 @@ input {
             /* line 46, ../sass/modules/_navbar.sass */
             .navbar--menu > ul > li a {
               padding: 25px 25px; } }
-          /* line 53, ../sass/modules/_navbar.sass */
+          /* line 54, ../sass/modules/_navbar.sass */
           .navbar--menu > ul > li a:hover, .navbar--menu > ul > li a:active, .navbar--menu > ul > li a:focus {
             color: rgba(77, 77, 77, 0.8); }
-          /* line 57, ../sass/modules/_navbar.sass */
+          /* line 58, ../sass/modules/_navbar.sass */
           .navbar--menu > ul > li a:active {
             opacity: 0.8; }
           /* line 21, ../sass/state/_effects.sass */
@@ -832,7 +937,7 @@ input {
             height: 3px;
             width: 0;
             left: 0;
-            bottom: 0;
+            bottom: -1px;
             position: absolute;
             background: transparent;
             transition: width 0.2s ease, background-color 0.2s ease; }
