--- a/sass/modules/_hero-unit.sass
+++ b/sass/modules/_hero-unit.sass
@@ -32,7 +32,7 @@
 			> a
 				+clearfix
 				display: inline-table
-				background: url('../img/hero/hexagon.png') no-repeat scroll top center transparent
+				background: url('../img/global/hexagon.png') no-repeat scroll top center transparent
 				width: 89px
 				height: 66px
 				padding: 15px 0 15px
