--- a/sass/state/_effects.sass
+++ b/sass/state/_effects.sass
@@ -24,7 +24,7 @@
     height: 3px
     width: 0
     left: 0
-    bottom: 0
+    bottom: -1px
     position: absolute
     background: transparent
     transition: width .2s ease, background-color .2s ease
