Removing breakpoint module

--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -1,1 +1,41 @@
+@import "../../node_modules/node-normalize-scss/normalize";
+@import '../../node_modules/compass-mixins/lib/compass/css3/box-sizing';
+@import '../../node_modules/susy/sass/susy';
+
+@import 'utils/vars';
+@import 'utils/clearfix';
+@import 'utils/fonts';
+@import 'utils/ie';
+@import 'utils/print';
+@import 'utils/screen';
+
 @import 'base/base';
+@import 'base/forms';
+@import 'base/mixins';
+@import 'base/typography';
+
+@import 'state/effects';
+@import 'layout/content';
+@import 'layout/header';
+@import 'layout/footer';
+@import 'layout/highlighted';
+@import 'layout/page';
+@import 'layout/sidebar';
+
+@import 'modules/article';
+@import 'modules/articles';
+@import 'modules/author';
+@import 'modules/button';
+@import 'modules/case-studies';
+@import 'modules/hero-slider';
+@import 'modules/hero-unit';
+@import 'modules/hero';
+@import 'modules/icons';
+@import 'modules/inputs';
+@import 'modules/login';
+@import 'modules/nav';
+@import 'modules/navbar';
+@import 'modules/quote';
+@import 'modules/search';
+@import 'modules/search';
+@import 'modules/social';
