--- a/assets/sass/utils/_fonts.scss
+++ b/assets/sass/utils/_fonts.scss
@@ -1,5 +1,5 @@
 @mixin font-face($style-name, $file, $family, $category: "") {
-  $filepath: "fonts/" + $family + "/" + $file;
+  $filepath: "/fonts/" + $family + "/" + $file;
 
   @font-face {
     font-family: #{$style-name};
