--- a/assets/sass/base/_forms.scss
+++ b/assets/sass/base/_forms.scss
@@ -1,64 +1,27 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: openSansRegular;
-}
+input,
+textarea {
+  box-sizing: border-box;
 
-html, body {
-  height: 100%;
-  margin: 0;
-}
-
-h1 {
-  font-size: 36px;
-}
-
-h2 {
-  font-size: 28px;
-}
-
-h3 {
-  font-size: 24px;
-}
-
-h4 {
-  font-size: 20px;
-}
-
-h5 {
-  font-size: 18px;
-}
-
-h6 {
-  font-size: 16px;
-}
-
-p {
-  font-size: 13.8px;
-}
-
-a {
-  text-decoration: none;
-  font-size: 13px;
-}
-
-ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-.inner {
-  @include clearfix;
-}
-
-a {
-  color: #9dbe68;
   display: block;
-  border: 1px solid transparent;
-  line-height: 1.8;
+  width: 100%;
+  background: #f7f7f7;
+  border: 1px solid #e6e6e6;
+  outline: none;
+  padding: 8px;
+  transition: opacity 0.1s ease-in-out;
+  -moz-transition: opacity 0.1s ease-in-out;
+  -webkit-transition: opacity 0.1s ease-in-out;
+  margin-bottom: 15px;
 
-  &:hover {
-    opacity: 0.7;
+  &:active,
+  &:focus {
+    background: #fff;
+    border: 1px solid #9dbe68;
+  }
+
+  .form {
+    &--submit {
+      margin-top: 8%;
+    }
   }
 }
