--- a/assets/sass/utils/_fonts.scss
+++ b/assets/sass/utils/_fonts.scss
@@ -27,3 +27,7 @@
 @include font-face(orbitronMedium, orbitron-medium-webfont, orbitron);
 
 @include font-face(quickSandRegular, quicksand-regular-webfont, quicksand);
+
+@include font-face(Roboto Regular, roboto-regular-webfont, roboto);
+
+@include font-face(Roboto Medium, roboto-medium-webfont, roboto);
