--- a/assets/sass/utils/_fonts.scss
+++ b/assets/sass/utils/_fonts.scss
@@ -31,3 +31,5 @@
 @include font-face(Roboto Regular, roboto-regular-webfont, roboto);
 
 @include font-face(Roboto Medium, roboto-medium-webfont, roboto);
+
+@include font-face(FontAwesome, fontawesome-webfont, fontawesome);
