--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -1,6 +1,8 @@
 @import "../../node_modules/node-normalize-scss/normalize";
 @import '../../node_modules/compass-mixins/lib/compass/css3/box-sizing';
 @import '../../node_modules/susy/sass/susy';
+@import "../../node_modules/sass-mediaqueries/media-queries";
+
 
 @import 'utils/vars';
 @import 'utils/clearfix';
@@ -8,6 +10,8 @@
 @import 'utils/ie';
 @import 'utils/print';
 @import 'utils/screen';
+
+@import 'libs/fontawesome';
 
 @import 'base/base';
 @import 'base/forms';
@@ -25,6 +29,7 @@
 @import 'modules/article';
 @import 'modules/articles';
 @import 'modules/author';
+@import 'modules/animation';
 @import 'modules/button';
 @import 'modules/case-studies';
 @import 'modules/hero-slider';
@@ -40,3 +45,4 @@
 @import 'modules/search';
 @import 'modules/social';
 @import 'modules/team-member';
+@import 'modules/work-elements';
