--- a/assets/sass/layout/_content.scss
+++ b/assets/sass/layout/_content.scss
@@ -8,7 +8,7 @@
   &--headings {
     border-bottom: 5px solid #9dbe68;
     padding: 2% 2% 1%;
-    margin-bottom: 7%;
+    margin-bottom: 0;
     text-align: center;
     &-inner {
       @include squish(1);
@@ -36,9 +36,34 @@
   }
 
   &--banner {
-    height: 157px;
-    background: rgba(243, 156, 18, 0.74);
-    border-bottom: 1px solid #e6e6e6;
+    position: relative;
+    margin-bottom: 3em;
+    &:after {
+      width: 100%;
+      height: 100%;
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(51, 105, 30, .7);
+    }
+    &-content {
+      &-inner {
+        position: absolute;
+        left: 0;
+        width: 65%;
+        color: #fff;
+        top: 50%;
+        z-index: 1;
+        padding-left: 5%;
+        background: rgba(51, 105, 30, .9);
+        padding-right: 7%;
+        padding-bottom: 1.5em;
+        padding-top: 2em;
+    }
+    }
   }
 
   &--content {
