--- a/assets/sass/modules/_work-elements.scss
+++ b/assets/sass/modules/_work-elements.scss
@@ -16,6 +16,7 @@
 			padding: 40px 25px 50px;
 			font-family: Roboto Regular;
 			h2 {
+				margin: 0;
 				i {
 					color: #9dbe68;
 					font-size: 50px;
