--- a/assets/sass/modules/_navbar.scss
+++ b/assets/sass/modules/_navbar.scss
@@ -2,11 +2,12 @@
   @include layout(12 fluid 0.35 float inside);
 
   @include clearfix;
-  
+  border-bottom: 1px solid #e6e6e6;
+  padding: 0px 0 3px;
   position: fixed;
   background: #fff;
   width: 100%;
-  border-bottom: 1px solid #e6e6e6;
+  border: none;
   z-index: 1000;
   
 
@@ -29,6 +30,7 @@
     padding: 0;
     position: relative;
     > ul {
+      @include clearfix;
       float: right;
       font-size: 0;
       > li:not(.magic-line) {
@@ -36,8 +38,9 @@
         font-size: 0;
         a {
           color: rgba(77, 77, 77, 0.8);
-          padding: 25px 35px;
+          padding: 25px 37px;
           font-family: orbitronMedium;
+          border: none;
 
           &:hover,
           &:active,
