--- a/assets/sass/layout/_content.scss
+++ b/assets/sass/layout/_content.scss
@@ -37,7 +37,10 @@
 
   &--banner {
     position: relative;
-    margin-bottom: 3em;
+    margin-bottom: 15%;
+    img {
+      width: 100%;
+    }
     &:after {
       width: 100%;
       height: 100%;
