--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: openSansRegular;
+  font-family: Roboto Regular;
 }
 
 html, body {
@@ -35,6 +35,8 @@ h6 {
 
 p {
   font-size: 13.8px;
+  line-height: 1.6;
+  letter-spacing: 2px;
 }
 
 a {
