--- a/assets/sass/layout/_content.scss
+++ b/assets/sass/layout/_content.scss
@@ -32,12 +32,11 @@
 
     @include clearfix;
 
-    margin-bottom: 5%;
+    margin-bottom: 15%;
   }
 
   &--banner {
     position: relative;
-    margin-bottom: 15%;
     img {
       width: 100%;
     }
@@ -74,7 +73,7 @@
 
     @include span(9);
 
-    padding-right: 10%;
+    padding-left: 10%;
     padding-top: 120px;
 
     p {
@@ -83,4 +82,8 @@
       margin-bottom: 3%;
     }
   }
+}
+
+.landing--page {
+  margin-bottom: 10%;
 }
