--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -17,6 +17,7 @@
 @import 'base/forms';
 @import 'base/mixins';
 @import 'base/typography';
+@import 'base/grids';
 
 @import 'state/effects';
 @import 'layout/content';
@@ -47,3 +48,4 @@
 @import 'modules/team-member';
 @import 'modules/work-elements';
 @import 'modules/services';
+@import 'modules/contact';
