--- a/assets/sass/modules/_navbar.scss
+++ b/assets/sass/modules/_navbar.scss
@@ -36,9 +36,9 @@
         display: table-cell;
         font-size: 0;
         a {
-          color: rgba(77, 77, 77, 0.8);
+          color: #999;
           padding: 27px 37px;
-          font-family: orbitronMedium;
+          font-family: Roboto;
           border: none;
 
           &:hover,
