--- a/assets/sass/modules/_work-elements.scss
+++ b/assets/sass/modules/_work-elements.scss
@@ -4,7 +4,7 @@
 	position: relative;
 	margin-bottom: 0;
 	padding-bottom: 40%;
-	background: #f2f2f2;
+	background: #9dbe68;
 	&-inner {
 		@include clearfix;
 		@include squish(1);
