--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Roboto Regular;
+  color: rgba(0,0,0,.7);
 }
 
 html, body {
@@ -37,11 +38,15 @@ p {
   font-size: 13.8px;
   line-height: 1.6;
   letter-spacing: 2px;
+  color: #999;
 }
 
 a {
   text-decoration: none;
   font-size: 13px;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
 }
 
 img {
