--- a/assets/sass/utils/_fonts.scss
+++ b/assets/sass/utils/_fonts.scss
@@ -35,3 +35,5 @@
 @include font-face(Roboto Medium, roboto-medium-webfont, roboto);
 
 @include font-face(FontAwesome, fontawesome-webfont, fontawesome);
+
+@include font-face('Simple-Line-Icons', Simple-Line-Icons, Simple-Line-Icons);
