Adding smooth scroll

--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,5 +1,10 @@
+@import "../utils/media-queries";
+
 .header {
   width: $container-fluid;
   margin: auto auto 76px auto;
-
+	@include max-screen(724px) {
+		margin: auto auto 0 auto;
+		background: red;
+	}
 }
