Adding new desing

--- a/assets/sass/layout/_content.scss
+++ b/assets/sass/layout/_content.scss
@@ -1,59 +1,33 @@
 .main {
   @include layout(12 fluid 0 float inside);
   h2, h3, h4 {
-    font-family: orbitronMedium;
+    font-family: OpenSansRegular;
     letter-spacing: 2px;
-    opacity: 0.8;
+    opacity: 1;
   }
   &--headings {
-    padding: 5% 2% 5%;
+    padding: 10% 2% 5%;
     margin-bottom: 0;
     text-align: center;
     position: relative;
-    background: #f9f9f9;
     &-inner {
       @include squish(1);
       h2 {
-        color: rgba(0,0,0,.5);
+        color: #000;
         letter-spacing: 10px;
-      }
-    }
-    &:before, &:after {
-      top: 100%;
-      left: 0;
-      right: 0;
-      border: solid transparent;
-      content: " ";
-      height: 0;
-      width: 0;
-      position: absolute;
-      pointer-events: none; 
-      margin: auto;    
-    }
-    &:after {
-      border-width: 40px;
-      border-color: rgba(249, 249, 249, 0);
-      border-top-color: #f9f9f9;
-    }
-    h2 {
-      position: relative;
-      padding-bottom: 1.5em;
-      &:after {
-        position: absolute;
-        content: "";
-        width: 100px;
-        height: 5px;
-        bottom: 0;
-        background: #9dbe68;
-        /* top: 0; */
-        right: 0;
-        margin: auto;
-        left: 0;
-        opacity: .9;
+        width: 15em;
+        border-top: 1px solid #e6e6e6;
+        border-bottom: 1px solid #e6e6e6;
+        text-transform: uppercase;
+        padding: 1em 0;
+        margin: 0 auto;
+        span {
+          color: #a0ce4e;
+          opacity: 1;
+        }
       }
     }
   }
-  padding-bottom: 10%;
   overflow: hidden;
 
   &--inner {
@@ -116,6 +90,24 @@
       font-size: 14px;
       line-height: 1.8;
       margin-bottom: 3%;
+    }
+  }
+  &.about {
+    border-bottom: 1px solid #a0ce4e;
+    position: relative;
+    overflow: visible;
+    &:after {
+      position: absolute;
+      content: "";
+      width: 20px;
+      height: 20px;
+      border: 1px solid #a0ce4e;
+      border-radius: 100%;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+      bottom: -1%;
+      background: #fff;
     }
   }
 }
