--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -1,61 +1,18 @@
 .footer {
   @include layout(12 0 fluid float inside);
 
-  background: #f7f7f7;
+  background: #282828;
   border-top: 1px solid #e6e6e6;
   height: 138px;
 
   @include clearfix;
 
   .inner {
-    background: #f9f9f9;
-    border-left: 1px solid #e6e6e6;
-    border-right: 1px solid #e6e6e6;
-    bottom: 0;
+    background: #282828;
   }
 
   &--cols4 {
     padding-top: 45px;
-    border-top: 10px solid #e6e6e6;
-
-    &:first-child {
-      position: relative;
-      border-top: 10px solid #9dbe68;
-
-      &:before {
-        content: " ";
-        height: 50px;
-        background: #9dbe68;
-        left: 0;
-        top: -29px;
-        position: absolute;
-        width: 50px;
-        border-radius: 100px;
-        right: 0;
-        bottom: 0;
-        margin-left: auto;
-        margin-right: auto;
-      }
-
-      &:after {
-        content: " ";
-        height: 35px;
-        background: #fff;
-        left: 0;
-        top: -21px;
-        position: absolute;
-        width: 35px;
-        border-radius: 100px;
-        right: 0;
-        bottom: 0;
-        margin-left: auto;
-        margin-right: auto;
-      }
-    }
-
-    &:last-child {
-      padding-top: 2.5em;
-    }
 
     @include span(4);
   }
@@ -82,7 +39,7 @@
     h2 {
       margin-top: 0;
       font-family: orbitronMedium;
-      color: #9dbe68;
+      color: #a0ce4e;
       margin-bottom: 8%;
       font-size: 18px;
     }
