--- a/assets/sass/modules/_services.scss
+++ b/assets/sass/modules/_services.scss
@@ -4,7 +4,7 @@
 		@include layout(12 0 fluid float inside);
 		margin-top: 5%;
 	}
-	@include span(6);
+	@include span(12);
 	padding-right: 2.5%;
 	padding-bottom: 5%;
 	position: relative;
@@ -13,10 +13,14 @@
 		position: absolute;
 		font-size: 4rem;
 		left: 0;
-		color: #9dbe68;
+		color: #a0ce4e;
 	}
 	h2 {
 		margin-bottom: 1.7em;
 		margin-top: 15px;
+		color: #000;
+		span {
+			color: #a0ce4e;
+		}
 	}
 }
