--- a/assets/sass/layout/_content.scss
+++ b/assets/sass/layout/_content.scss
@@ -106,12 +106,8 @@
       left: 0;
       right: 0;
       margin: 0 auto;
-      bottom: -1%;
+      top: 99%;
       background: #fff;
     }
   }
-}
-
-.landing--page {
-  margin-bottom: 10%;
 }
