--- a/assets/sass/utils/_fonts.scss
+++ b/assets/sass/utils/_fonts.scss
@@ -37,3 +37,5 @@
 @include font-face(FontAwesome, fontawesome-webfont, fontawesome);
 
 @include font-face('Simple-Line-Icons', Simple-Line-Icons, Simple-Line-Icons);
+
+@include font-face(Arimo , Arimo, arimo);
