--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -8,6 +8,7 @@
 @import 'utils/ie';
 @import 'utils/print';
 @import 'utils/screen';
+@import 'utils/media-queries';
 
 @import 'libs/fontawesome';
 @import 'libs/line-icons';
