--- a/assets/sass/layout/_page.scss
+++ b/assets/sass/layout/_page.scss
@@ -3,4 +3,7 @@
   height: auto !important;
   height: 100%;
   margin: 0 auto -140px;
+  @include mq($max-width: 980px) {
+  	margin: 0 auto 0;
+  }
 }
