--- a/assets/sass/modules/_services.scss
+++ b/assets/sass/modules/_services.scss
@@ -8,7 +8,7 @@
 	padding-right: 2.5%;
 	padding-bottom: 5%;
 	position: relative;
-	padding-left: 9%;
+	padding-left: 7em;
 	i {
 		position: absolute;
 		font-size: 4rem;
