--- a/assets/sass/modules/_banners.scss
+++ b/assets/sass/modules/_banners.scss
@@ -16,12 +16,24 @@
 			font-family: Arimo;
 			letter-spacing: 2px;
 		}
+		h2 {
+			@include mq($max-width: 980px) {
+				font-size: 20px;
+			}
+			@include mq($max-width: 899px) {
+				font-size: 16px;
+				line-height: 1.5;
+			}
+		}
 		p {
-			font-size: 16px;
+			@include mq($max-width: 899px) {
+				font-size: 13px;
+				line-height: 1.5;
+			}
 		}
 		a {
 	    display: inline-block;
-	    padding: 15px 16px;
+	    padding: 12px 16px;
 	    background: #a0ce4e;
 	    color: #fff;
 	    text-transform: uppercase;
@@ -33,6 +45,10 @@
 	    	color: #a0ce4e;
 	    	border: 1px solid #a0ce4e;
 	    	background: #fff;
+	    }
+	    @include mq($max-width: 980px) {
+	    	font-size: 16px;
+	    	padding: 5px 16px;
 	    }
 		}
 		&:after {
