--- a/assets/sass/modules/_contact.scss
+++ b/assets/sass/modules/_contact.scss
@@ -1,10 +1,11 @@
 .contact {
+	padding-bottom: 2em;
 	&--details {
 		ul {
 			margin-top: 4em;
 			li {
 		    position: relative;
-		    padding: 0 26% 5% 8%;
+		    padding: 0 26% 5% 3em;
 		    line-height: 1.5;
 		    margin: 0 0 1.5em;
 				i {
