Adding mobile nav

--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -4,7 +4,6 @@
   width: $container-fluid;
   margin: auto auto 89px auto;
 	@include max-screen(724px) {
-		margin: auto auto 0 auto;
-		background: red;
+		margin: auto auto 58px;
 	}
 }
