--- a/assets/sass/modules/_hero-unit.scss
+++ b/assets/sass/modules/_hero-unit.scss
@@ -26,6 +26,9 @@
     @include mq($max-width: 899px) {
       font-size: 16px;
     }
+    @include mq($max-width: 724px) {
+      font-size: 13px;
+    }
   }
   & h1 {
     font-family: orbitronMedium;
