--- a/assets/sass/modules/_work-elements.scss
+++ b/assets/sass/modules/_work-elements.scss
@@ -55,13 +55,18 @@
 				}
 			}
 			padding: 40px 25px 50px;
-			font-family: Roboto Regular;
+			font-family: Roboto;
 			h2 {
 				margin: 0;
 				i {
 					color: #a0ce4e;
 					font-size: 50px;
 				}
+        p {
+          font-size: 22px;
+          font-family: quickSandRegular;
+          font-weight: bold;
+        }
 			}
 			h4 {
 				font-size: 22px;
