--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -1,6 +1,9 @@
-@import "../../node_modules/node-normalize-scss/normalize";
-@import '../../node_modules/compass-mixins/lib/compass/css3/box-sizing';
-@import '../../node_modules/susy/sass/susy';
+$simple-line-font-path: "~simple-line-icons/fonts/" !default;
+@import "~node-normalize-scss/normalize";
+@import '~compass-mixins/lib/compass/css3/box-sizing';
+@import '~susy/sass/susy';
+
+@import "~simple-line-icons/scss/simple-line-icons";
 
 @import 'utils/vars';
 @import 'utils/clearfix';
